insercao do css na pagina index

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Portfolio Profissional</title>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="/css/estilo.css">
 </head>
 	<body>
 	<h1>CONSTRUÇÃO DE UM PORTFÓLIO PROFISSIONAL</h1>
