--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Portfolio Profissional</title>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="https://github.com/LzPadrao/portfolio/css/estilo.css">
+	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
 	<body>
 	<h1>...HELLO VISITOR...</h1>
