--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
 	<body>
-	<h1>...HELLO VISITOR...</h1>
+	<h1>{ HELLO VISITOR }</h1>
 	</body>
 </html>
